--- a/Projects.html
+++ b/Projects.html
@@ -17,6 +17,7 @@
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
+                <h2 class="projectName">당근마켓</h2>
                 <div class="thumb project1">
                     <div class='mainpic'></div>
                     <p class='light'></p>
@@ -46,6 +47,7 @@
                 </div>
             </div>
             <div class="swiper-slide">
+                <h2 class="projectName">What Is Soccer</h2>
                 <div class="thumb project2">
                     <div class='mainpic'></div>
                     <p class='light'></p>
@@ -63,13 +65,13 @@
                             </li>
                             <li>
                                 <p>구현기능</p>
-                                <ul class="nestedUl">
-                                    <li>팝업 메뉴</li>
-                                    <li>네비게이션 바</li>
-                                    <li>자동 슬라이드 구현</li>
-                                    <li>서브 로고에 월드컵까지 남은 일수 표시</li>
-                                    <li>메뉴화면이나 서브 화면에서 여러가지 애니메이션 구현</li>
-                                </ul>
+                                <p>
+                                    팝업 메뉴,
+                                    네비게이션 바,
+                                    자동 슬라이드 구현,
+                                    서브 로고에 월드컵까지 남은 일수 표시,
+                                    메뉴화면이나 서브 화면에서 여러가지 애니메이션 구현,
+                                </p>
                             </li>
                             <li class="link">
                                 <a href="https://github.com/loso762/WIS.git" target="blank"> 코드 확인 </a>
@@ -80,6 +82,7 @@
                 </div>
             </div>
             <div class="swiper-slide">
+                <h2 class="projectName">LOLCORD</h2>
                 <div class="thumb project3">
                     <div class='mainpic'></div>
                     <p class='light'></p>
@@ -100,15 +103,15 @@
                                 <p>검색 기능 , axios 이용 API 호출을 통한 실시간 정보 제공, 서로 다른 페이지 간 데이터 호출</p>
                             </li>
                             <li class="link">
-                                <a href="https://github.com/loso762/lolre.git" target="blank"> 코드 확인 </a>
-                                <a href="https://loso762.github.io/lolre/" target="blank"> 사이트 보기 </a>
+                                <a href="https://github.com/loso762/LOLCORD.git" target="blank"> 코드 확인 </a>
+                                <a href="https://loso762.github.io/LOLCORD/" target="blank"> 사이트 보기 </a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-
             <div class="swiper-slide">
+                <h2 class="projectName">사진온실</h2>
                 <div class="thumb project4">
                     <div class='mainpic'></div>
                     <p class='light'></p>
@@ -122,8 +125,7 @@
                             <img src="./img/sub1.svg" class="img1" />
                             <li>
                                 <p>소개</p>
-                                <p>'사진온실'이라는 사이트를 클론 코딩한 저의 첫 프로젝트로, PC,Tablet,Mobile 등 반응형 웹으로 이루어져있으며 이 프로젝트를 통해 여러
-                                    css 기술과 AOS나 Swiper slider 같은 라이브러리 사용방법을 익혔으며 JS로 작업했습니다.</p>
+                                <p>'사진온실'이라는 사이트를 클론 코딩한 저의 첫 프로젝트로, PC,Tablet,Mobile 등 반응형 웹으로 이루어져있으며<br> 이 프로젝트를 통해 여러 css 기술과 AOS나 Swiper slider 같은 라이브러리 사용방법을 익혔으며 JS로 작업했습니다.</p>
                             </li>
                             <li>
                                 <p>구현기능</p>
@@ -142,6 +144,7 @@
         <div class="swiper-button-prev"></div>
         <div class="swiper-pagination"></div>
     </div>
+    <p class="guide">이미지에 마우스를 올려보세요!</p>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 </body>
 
