타블렛 반응형 적용

--- a/Projects.html
+++ b/Projects.html
@@ -125,7 +125,8 @@
                             <img src="./img/sub1.svg" class="img1" />
                             <li>
                                 <p>소개</p>
-                                <p>'사진온실'이라는 사이트를 클론 코딩한 저의 첫 프로젝트로, PC,Tablet,Mobile 등 반응형 웹으로 이루어져있으며<br> 이 프로젝트를 통해 여러 css 기술과 AOS나 Swiper slider 같은 라이브러리 사용방법을 익혔으며 JS로 작업했습니다.</p>
+                                <p>'사진온실'이라는 사이트를 클론 코딩한 저의 첫 프로젝트로, PC,Tablet,Mobile 등 반응형 웹으로 이루어져있으며 이 프로젝트를 통해 여러
+                                    css 기술과 AOS나 Swiper slider 같은 라이브러리 사용방법을 익혔으며 JS로 작업했습니다.</p>
                             </li>
                             <li>
                                 <p>구현기능</p>
