--- a/aboutme.html
+++ b/aboutme.html
@@ -21,11 +21,11 @@
       <figcaption>김기훈<br><span>(KIM KIHUN)</span></figcaption>
     </figure>
     <div class="infoCon">
-      <pre class="info1">
+      <p class="info1">
         항상 더 나은 방식, 효율적인 방식에 대해 고민하는 개발자 김기훈 입니다.<br>
-        끊임없이 부딪히고 도전하며, <b>고치고 바뀌는 것</b>을 두려워 하지 않습니다.<br>
+        끊임없이 부딪히고 도전하며, 바뀌는 것을 두려워 하지 않습니다.<br>
         사용자에게 더 나은 경험을 제공하고 이를 넘어 사용자의 삶에 기여할 수 있는 서비스를 개발하고 싶습니다.
-      </pre>
+      </p>
       <ul class="info2">
         <li>
           <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="calendar"
