--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
     <main>
         <img src="./img/popcorn.png" alt="" class="popcorn">
         <div class="bg1">
-            <div class="poster2">
+            <div class="poster p2">
                 <img src="./img/me.jpeg" alt="" />
             </div>
             <div class="poster2ex">
@@ -30,10 +30,9 @@
                     <li>타임 라인</li><br>
                 </ol>
             </div>
-            <p class="plzclick2">click!</p>
         </div>
         <div class="bg2">
-            <div class="poster">
+            <div class="poster p1">
                 <img src="./img/1.PNG" alt="" />
                 <img src="./img/2.PNG" alt="" />
                 <img src="./img/3.PNG" alt="" />
@@ -46,9 +45,12 @@
                     <li>개인프로젝트와 팀프로젝트 작업물들</li>
                 </ul>
             </div>
-            <p class="plzclick">click!</p>
         </div>
     </main>
+    <div class="clickguide">
+        <p class="plzclick2">⇧</p>
+        <p class="plzclick">⇧</p>
+    </div>
 </body>
 
 </html>
