헤더메뉴에 활성화 된 페이지   표시

--- a/header.html
+++ b/header.html
@@ -1,12 +1,11 @@
-    <header>
-        <a href="./main.html" class="home">
-            <div class="ticket">
-                <div data-number="941024">Kihun's<br/>Portfolio</div>
-            </div>
-        </a>
-        <nav>
-            <a href="./aboutme.html" class="menu">About Me</a>
-            
-            <a href="./Projects.html" class="menu">PROJECTS</a>
-        </nav>
-    </header>
+<header>
+    <a href="./main.html" class="home">
+        <div class="ticket">
+            <div data-number="941024">Kihun's<br />Portfolio</div>
+        </div>
+    </a>
+    <nav>
+        <a href="./aboutme.html" class="menu me">About Me</a>
+        <a href="./Projects.html" class="menu pro">PROJECTS</a>
+    </nav>
+</header>
