--- a/aboutme.html
+++ b/aboutme.html
@@ -117,7 +117,7 @@
       <article>
         <h2>Pros</h2>
         <ol type="1">
-          <li>집중력이 뛰어나 어지간한 일은 끝낼 때까지 자리에서 일어나지 않습니다.</li>
+          <li>집중력이 뛰어나서 정확하고 세심함을 필요로 하는 작업에 강점이 있습니다. </li>
           <li>모르는 것을 두려워하지 않고 어떻게든 이를 해결하기 위해 노력합니다.</li>
           <li>새로운 환경에 대한 적응과 배움이 빠릅니다.</li>
           <li>팀 단위 업무가 기본인 회사 생활 경험이 있어,<br> 커뮤니케이션 스킬과 협업 능력에 자신이 있습니다. </li>
