--- a/aboutme.html
+++ b/aboutme.html
@@ -16,16 +16,18 @@
 
 <body>
   <section class="mainInfo">
-    <figure>
-      <img src="./img/kihun.png">
-      <figcaption>김기훈<br><span>(KIM KIHUN)</span></figcaption>
-    </figure>
     <div class="infoCon">
+      <figure>
+        <img src="./img/kihun.png">
+        <figcaption>김기훈<br><span>(KIM KIHUN)</span></figcaption>
+      </figure>
+
       <p class="info1">
         항상 더 나은 방식, 효율적인 방식에 대해 고민하는 개발자 김기훈 입니다.<br>
         끊임없이 부딪히고 도전하며, 바뀌는 것을 두려워 하지 않습니다.<br>
         사용자에게 더 나은 경험을 제공하고 이를 넘어 사용자의 삶에 기여할 수 있는 서비스를 개발하고 싶습니다.
       </p>
+
       <ul class="info2">
         <li>
           <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="calendar"
@@ -107,10 +109,9 @@
           </p>
         </li>
       </ul>
+
     </div>
   </section>
-
-  <div class="arrow bounce"></div>
 
   <section class="prosConsInfo">
     <div class="prosCons">
@@ -188,8 +189,9 @@
     </div>
   </section>
 
+  <div class="arrow bounce"></div>
   <button class="GoTop">
-    <span class="material-symbols-outlined">arrow_upward</span>
+    <span>▴</span>
   </button>
 </body>
 
