--- a/Projects.html
+++ b/Projects.html
@@ -30,8 +30,8 @@
                             <img src="./img/sub4.png" />
                             <li>
                                 <p>소개</p>
-                                <p>첫 풀스택 프로젝트로 리액트의 NextJS 프레임워크 Firebase 백앤드 서버를 이용하여 당근마켓을
-                                    클론코딩한 CRUD기능 구현 위주의 프로젝트입니다.</p>
+                                <p>첫 풀스택 프로젝트로 리액트의 NextJS 프레임워크와 Firebase 백앤드 서버를 이용하였으며, 인터넷 강의를 통해 따라친 클론 코딩이
+                                    아닌 직접 처음부터 끝까지 구조를 설계해 만든 프로젝트입니다.</p>
                             </li>
                             <li>
                                 <p>구현기능</p>
@@ -39,7 +39,7 @@
                                     판매나 구매 시 판매,구매목록에서 확인 가능하도록 목록 구현, kakao map API를 이용해 내 위치에 따라 거리별 제품 필터링 기능 구현</p>
                             </li>
                             <li class="link">
-                                <a href="https://github.com/loso762/carrotMarket.git" target="blank"> 코드 확인 </a>
+                                <a href="https://github.com/loso762/carrotMarket.git" target="blank"> 코드 및 프로젝트 소개 </a>
                                 <a href="https://carrot-market-v65x.vercel.app/" target="blank"> 사이트 보기 </a>
                             </li>
                         </ul>
@@ -103,7 +103,7 @@
                                 <p>검색 기능 , axios 이용 API 호출을 통한 실시간 정보 제공, 서로 다른 페이지 간 데이터 호출</p>
                             </li>
                             <li class="link">
-                                <a href="https://github.com/loso762/LOLCORD.git" target="blank"> 코드 확인 </a>
+                                <a href="https://github.com/loso762/LOLCORD.git" target="blank"> 코드 및 프로젝트 소개 </a>
                                 <a href="https://loso762.github.io/LOLCORD/" target="blank"> 사이트 보기 </a>
                             </li>
                         </ul>
@@ -133,7 +133,7 @@
                                 <p>아코디언 메뉴, 팝업 메뉴, 슬라이드 화면, 사이트 접속 시 랜덤으로 메인화면 변경되도록 구성 </p>
                             </li>
                             <li class="link">
-                                <a href="https://github.com/loso762/first_clone.git" target="blank"> 코드 확인 </a>
+                                <a href="https://github.com/loso762/first_clone.git" target="blank"> 코드 및 프로젝트 소개 </a>
                                 <a href="https://loso762.github.io/first_clone/" target="blank"> 사이트 보기 </a>
                             </li>
                         </ul>
