--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <header>
-    <a href="./main.html" class="home">
+    <a href="./aboutme.html" class="home">
         <div class="ticket">
             <div data-number="941024">Kihun's<br />Portfolio</div>
         </div>
