--- a/Projects.html
+++ b/Projects.html
@@ -74,7 +74,7 @@
                                 </p>
                             </li>
                             <li class="link">
-                                <a href="https://github.com/loso762/WIS.git" target="blank"> 코드 확인 </a>
+                                <a href="https://github.com/loso762/WIS.git" target="blank"> 코드 및 프로젝트 소개 </a>
                                 <a href="https://loso762.github.io/WIS/" target="blank"> 사이트 보기 </a>
                             </li>
                         </ul>
