--- a/Projects.html
+++ b/Projects.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <script defer src="./js/common.js"></script>
     <script defer src="./js/Projects.js"></script>
-    <link rel="stylesheet" href="./css/sub2.css">
+    <link rel="stylesheet" href="./css/projects.css">
     <title>Projects</title>
 </head>
 
