--- a/header.html
+++ b/header.html
@@ -1,11 +1,11 @@
 <header>
-    <a href="./aboutme.html" class="home">
+    <a href="./index.html" class="home">
         <div class="ticket">
             <div data-number="941024">Kihun's<br />Portfolio</div>
         </div>
     </a>
     <nav>
-        <a href="./aboutme.html" class="menu me">About Me</a>
+        <a href="./index.html" class="menu me">About Me</a>
         <a href="./Projects.html" class="menu pro">PROJECTS</a>
     </nav>
 </header>
